# Combat-Display-System

./: CMakeLists.txt  CMakeLists_og.txt  README.md
.github/workflows/: ci.yml  ci_notworking.yml
include/: TopicDefinitions.h  combat.h  jthread.h  liquidationparameters.h  ownship.h  probabilityofkill.h  ssmtargetdata.h  subscriber.h  tracks.h  trajectorycomputation.h  waypoints.h  weapondangerzone.h
qml/: Combat.qml  Combobox.qml  CourseSpeedDepth.qml  CustTextField.qml  DisplayLowerPart.qml  DisplayTextField.qml  Footer.qml  GeometryDisplay.qml  Header.qml  HookedTrackInfo.qml  LiquidationParameters.qml  OwnShipD.qml  ProbabilityOfKill.qml  RangeRular.qml  SSMTargetData.qml  SelectStandByMissile.qml  SensorCheckBox.qml  TrackTable.qml  TrajectoryComputation.qml  WayPoints.qml  WeaponDangerZone.qml  main.qml  myCombobox.qml  qml.qrc
src/: combat.cpp  jthread.cpp  liquidationparameters.cpp  main.cpp  ownship.cpp  probabilityofkill.cpp  ssmtargetdata.cpp  subscriber.cpp  tracks.cpp  trajectorycomputation.cpp  waypoints.cpp  weapondangerzone.cpp
xmlParser/: FastDDSManifest.xml  Tool.cpp  Tool.h  Tool.txt  Tool.xml  Tool_generated.xml  xgconsole.xml
